--- a/opensrp-chw-hiv/src/main/res/menu/bottom_nav_hiv_menu.xml
+++ b/opensrp-chw-hiv/src/main/res/menu/bottom_nav_hiv_menu.xml
@@ -5,7 +5,7 @@
         android:id="@+id/action_hiv_clients"
         android:enabled="true"
         android:icon="@mipmap/ic_home"
-        android:title="@string/action_hiv_clients"
+        android:title="@string/home"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_received_referrals"
