--- a/opensrp-chw-hiv/src/main/res/layout/neat_hiv_registration_form_activity.xml
+++ b/opensrp-chw-hiv/src/main/res/layout/neat_hiv_registration_form_activity.xml
@@ -11,6 +11,7 @@
         android:id="@+id/sampleToolBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/primary"
         android:minHeight="?attr/actionBarSize">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,17 +35,19 @@
                 android:layout_marginStart="16dp"
                 android:textColor="#fff"
                 android:textSize="20sp"
-                android:text="Neat Forms"
+                android:text="HIV Client"
                 app:layout_constraintStart_toEndOf="@+id/exitFormImageView"
                 app:layout_constraintEnd_toStartOf="@+id/completeButton"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
 
-            <ImageButton
+            <Button
                 android:id="@+id/completeButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:text="@string/save"
+                android:textColor="#fff"
                 android:background="@android:color/transparent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
