Implemented saving of hiv index contacts test followup

--- a/opensrp-chw-hiv/src/main/res/layout/activity_hiv_client_index_list.xml
+++ b/opensrp-chw-hiv/src/main/res/layout/activity_hiv_client_index_list.xml
@@ -45,7 +45,8 @@
 
         <org.smartregister.view.customcontrols.CustomFontTextView
             android:id="@+id/index_list"
-            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
+            style="@style/CustomFontTextViewStyle.ClientList.Bold"
+            android:textAllCaps="true"
             android:layout_width="match_parent"
             android:layout_marginStart="18dp"
             android:layout_height="wrap_content"
