--- a/opensrp-chw-hiv/src/main/res/layout/hiv_follow_up_visit_view.xml
+++ b/opensrp-chw-hiv/src/main/res/layout/hiv_follow_up_visit_view.xml
@@ -33,6 +33,33 @@
             android:visibility="gone" />
 
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/record_index_contact_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dp"
+        android:visibility="gone"
+        android:weightSum="2">
+
+        <org.smartregister.view.customcontrols.CustomFontTextView
+            android:id="@+id/textview_record_index_contact_visit"
+            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_weight="1"
+            android:background="@drawable/record_hiv_followup"
+            android:gravity="center_horizontal"
+            android:paddingLeft="30dp"
+            android:paddingTop="10dp"
+            android:paddingRight="30dp"
+            android:paddingBottom="10dp"
+            android:text="@string/register_contacts"
+            android:textColor="@color/white"
+            android:visibility="visible" />
+
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/record_visit_status_bar_layout"
