--- a/opensrp-chw-hiv/src/main/res/layout/hiv_follow_up_visit_view.xml
+++ b/opensrp-chw-hiv/src/main/res/layout/hiv_follow_up_visit_view.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="10dp"
-        android:visibility="gone"
+        android:visibility="visible"
         android:weightSum="2">
 
         <org.smartregister.view.customcontrols.CustomFontTextView
