--- a/opensrp-chw-hiv/src/main/res/layout/hiv_index_contact_list_row_item.xml
+++ b/opensrp-chw-hiv/src/main/res/layout/hiv_index_contact_list_row_item.xml
@@ -31,10 +31,19 @@
             android:text="Patient Name, Age"
             android:textColor="@color/text_black"
             android:textSize="@dimen/register_list_title_size" />
+        <org.smartregister.view.customcontrols.CustomFontTextView
+            android:id="@+id/relationship"
+            style="@style/CustomFontTextViewStyle.ClientList"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:text="Sex Partner"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/register_list_desc_size" />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:orientation="horizontal">
             <org.smartregister.view.customcontrols.CustomFontTextView
